<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"

    android:orientation="vertical"
    >

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="16dp"
      android:gravity="center"
      android:text="Change PIN"
      android:textAppearance="@style/TextAppearance.Title"
      android:textColor="@color/zen_color"
      android:textSize="16sp"
      android:textStyle="bold"
      />
  <TextView

      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="16dp"
      android:gravity="center"
      android:text="you can use numbers and letters"
      android:textColor="@color/appcolor_grey"
      android:textSize="16sp"
      android:textStyle="bold"
      />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="16dp"
      android:orientation="vertical"
      >
    <EditText
        android:id="@+id/edit_settings_old_pin"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Old PIN"
        android:inputType="text"
        android:textColor="@color/Black"
        android:textColorHint="@color/appcolor_grey"
    />
    <EditText
        android:id="@+id/edit_settings_new_pin"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="New PIN"
        android:inputType="text"
        android:textColor="@color/Black"
        android:textColorHint="@color/appcolor_grey"
    />
    <EditText
        android:id="@+id/edit_settings_new_pin2"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Repeat New PIN"
        android:inputType="number"
        android:textColor="@color/Black"
        android:textColorHint="@color/appcolor_grey"
    />
  </LinearLayout>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_margin="16dp"
      android:orientation="horizontal"
      style="?android:attr/buttonBarStyle"
      >

    <Button
        android:id="@+id/btn_update_pin_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_weight="1"
        android:background="@drawable/button_send"
        android:text="Change PIN"
        android:textColor="@color/White"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.Title"
        style="?android:attr/borderlessButtonStyle"
    />

    <Button
        android:id="@+id/btn_update_pin_close"
        android:textAppearance="@style/TextAppearance.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_weight="1"
        android:background="@drawable/button_send"
        android:text="Close"
        android:textColor="@color/White"
        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle"
    />
  </LinearLayout>

</LinearLayout>