...
            android:textSize="16sp"
            android:importantForAutofill="no"
            />
      </android.support.design.widget.TextInputLayout>

      <Button
          android:id="@+id/button_new_account_import"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:background="@drawable/button_send"
          android:text="IMPORT WALLET"
          android:textAppearance="@style/TextAppearance.Title"
          android:textColor="@color/White"
          />
    </LinearLayout>

  </LinearLayout>
...
