...
      android:textAppearance="@style/TextAppearance.Title"
      android:textSize="20sp"
      />


  <TextView
      android:id="@+id/textView_dlg_status"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:padding="8dp"
      android:text="Status: Pending (~2 min)"
      android:textAppearance="@style/TextAppearance.Title"
      android:textSize="14sp"
      />
  <ProgressBar
      android:id="@+id/progressBar_dlg_hash"
      android:layout_width="match_parent"
...
