...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
    >
      <Button
          android:id="@+id/btn_dlg_confirm_send"
          android:layout_width="200dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_weight="0"
          android:textAppearance="@style/TextAppearance.Title"
          android:background="@drawable/button_send"
          android:gravity="center"
          android:text="SEND"
          android:textColor="@android:color/white"
          android:textSize="20sp"
          />
    </FrameLayout>
  </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
...
