...
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="32dp"
          >
        <Button
            android:id="@+id/send_button_send"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="@drawable/button_send"
            android:gravity="center"
            android:text="CONTINUE"
            android:textAppearance="@style/TextAppearance.Title"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            />
      </FrameLayout>
    </LinearLayout>
...
